--- a/_includes/footer_jing.html
+++ b/_includes/footer_jing.html
@@ -11,6 +11,7 @@
         <!-- <img src="img/wechat_qrcode.png"> -->
       </a>
     </li>
+    <li><a href="https://www.instagram.com/unijing/"><i class="fa fa-instagram"></i></a></li>
     <li><a href="http://www.linkedin.com/profile/view?id=232981920&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a></li>
     <li><a id="zhihu" href="http://www.zhihu.com/people/unijing">知</a></li>
   </ul>
