--- a/_layouts/portfolio_jing.html
+++ b/_layouts/portfolio_jing.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {% include header_post.html %}
+    {% include header_portfolio.html %}
 
     <div class="page-content">
       <div class="wrapper">
