--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,14 +1,9 @@
 ---
-layout: default_jing
+layout: portfolio_jing
 ---
 
-<div class="home">
-
-  
-  <!--- <h1 class="page-heading">Posts</h1>  ---->
-
-  <ul class="post-list">
-    {% for post in site.categories['blog'] %}
+ <ul class="portfolio-list">
+    {% for portfolio in site.posts %}
       <li class="post-item">
         <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
 
@@ -21,7 +16,3 @@ layout: default_jing
       </li>
     {% endfor %}
   </ul>
-
-  <!--- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>  -->
-
-</div>
