--- a/_layouts/portfolio_jing.html
+++ b/_layouts/portfolio_jing.html
@@ -9,7 +9,19 @@
 
     <div class="page-content">
       <div class="wrapper">
-        {{ content }}
+        <ul class="portfolio-list">
+    {% for post in site.categories['portfolio'] %}
+     	 <li class="post-item">
+        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+
+        <h2>
+          <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          <a href="{{ post.url | prepend: site.baseurl }}"><img class="portfolio-cover" src="{{ post.cover }}"></a>
+          <p class="post-abstract"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.abstract }}</a></p>
+        </h2>
+      </li>
+    {% endfor %}
+  </ul>
       </div>
     </div>
 
