--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -2,3 +2,14 @@
 layout: portfolio_jing
 ---
 
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+
+  <header class="post-header">
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+  </header>
+
+  <div class="post-content" itemprop="articleBody">
+    {{ content }}
+  </div>
+
+</article>
