text color adjustments.

--- a/_includes/header_about.html
+++ b/_includes/header_about.html
@@ -3,8 +3,8 @@
 		<a href="{{ site.baseurl }}/index.html"><img id="logo-text" src="/img/logo_text.png"></a>
 		<span id="post-slogan">The answer to life, the universe, and everything.</span>
 		<ul>
-			<li><a href="{{ site.baseurl }}/index.html">Blog</a></li>
 			<li><a href="{{ site.baseurl }}/portfolio.html">Portfolio</a></li>
+			<li id="tab-about"><a href="{{ site.baseurl }}/about.html">About</a></li>
 		</ul>
 	</div>
 </header>
