--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@
   font-family: 'Libre Baskerville', serif;
 }
 
-#sub-nav li a, a:visited, a:hover, a:active {
+#sub-nav li a, a:visited, a:hover {
   color: inherit;
   text-decoration: none;
 }
@@ -73,7 +73,15 @@
 
 #nav-bar a, a:visited, a:hover, a:active {
   text-decoration: none;
-  color: inherit;
+  color: rgba(0,0,0,.4);
+}
+
+#tab-portfolio a {
+  color: rgba(0,0,0,1);
+}
+
+#tab-about a {
+  color: rgba(0,0,0,1);
 }
 
 #logo-text {
@@ -100,6 +108,10 @@ body {
   max-width: 700px;
 }
 
+body .page-content a, a:hover, a:visited, a:active {
+  color: inherit;
+}
+
 .post {
   padding-bottom: 120px;
 }
@@ -113,7 +125,7 @@ body {
   padding-bottom: 80px;
 }
 
-.post-meta {
+body .post-meta {
   color: rgba(0,0,0,0.4);
   font-size: 14px;
   font-family: helvetica;
@@ -126,9 +138,10 @@ body {
 
 #post-more {
   float: left;
+  color: rgba(0,0,0,0.4);
 }
 
-.post-link, .post-title {
+.post-link,.post-title {
   color: inherit;
   text-decoration: none;
   font-family: helvetica;
@@ -191,17 +204,22 @@ p a {
   border: 1px solid rgba(255,255,255,.75);
   background-color: rgba(0,0,0,0);
   border-radius: 5px;
-  color: white;
+  font-family: helvetica;
   padding: 16px 28px;
   text-align: center;
   text-decoration: none;
   font-size: 14px;
   font-weight: 300;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
 }
 
-button a {
-  color: inherit;
-  text-decoration: none;
+.portfolio-btn:hover {
+  border-color: rgba(255,255,255,.3);
+}
+
+.portfolio-btn a, a:visited, a:hover, a:active {
+  color: rgb(255,255,255);
 }
 
 /* footer */
