--- a/css/main.css
+++ b/css/main.css
@@ -218,9 +218,11 @@ p a {
   border-color: rgba(255,255,255,.3);
 }
 
-.portfolio-btn a, a:visited, a:hover, a:active {
+#portfolio-btn a, a:hover, a:visited, a:active{
   color: rgb(255,255,255);
 }
+
+
 
 /* footer */
 .footer {
