--- a/_includes/header_jing.html
+++ b/_includes/header_jing.html
@@ -1,10 +1,19 @@
 <header id="top" class="main-header">
+	
 	<div id="nav-bar">
 		<ul id="sub-nav">
 			<li><a href="portfolio.html">Portfolio</a></li>
 			<li><a href="about.html">About</a></li>
 		</ul>
 	</div>
+	
 	<img id="logo" src="img/logo.png">	
 	<p id="slogan">The answer to life, the universe, and everything.</p>
+	<!--- 
+	<ul id="nav-mid">
+		<li><a href="portfolio.html">Portfolio</a></li>
+		<li>|</li>
+		<li><a href="about.html">About</a></li>
+	</ul>
+	-->
 </header>
