--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,29 @@
   height: 100%;
 }
 
+/*
+#nav-mid {
+  list-style: none;
+  text-align: center;
+  padding: 4px 0 160px;
+}
+
+#nav-mid li {
+  display: inline-block;
+  padding-left: 12px;
+  font-family: 'Libre Baskerville', serif;
+}
+
+#nav-mid li:first-child {
+  padding-left: 0;
+}
+
+#nav-mid li a, a:visited, a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+*/
+
 #sub-nav {
   list-style: none;
   position: absolute;
@@ -187,7 +210,7 @@ p a {
 /* body_portfolio */
 .portfolio-list {
   list-style: none;
-  margin-top: 0;
+  margin: 0;
   padding-left: 0;
 }
 
@@ -196,7 +219,7 @@ p a {
 }
 
 #portfolio-btn {
-  padding-top: 440px;
+  padding-top: 460px;
   text-align: center;
 }
 
@@ -208,8 +231,8 @@ p a {
   padding: 16px 28px;
   text-align: center;
   text-decoration: none;
-  font-size: 14px;
-  font-weight: 300;
+  font-size: 13px;
+  font-weight: 400;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
 }
